[package]
name = "rusthumb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
image = "0.25.2"
tokio = { version = "1.39.1", features = ["full"] }
aws_lambda_events = "0.15.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.42.0"
lambda_runtime = "0.13.0"

[[bin]]
name = "lambda"
path = "src/bin/lambda.rs"

[profile.release]
lto = true

[target.'cfg(all(target_os = "linux", target_env = "gnu"))']
rustflags = [
  "-C", "target-feature=+crt-static",
]
